jvm补充